--- a/template/contracts/.env.example
+++ b/template/contracts/.env.example
@@ -1,6 +1,3 @@
 PRIVATE_KEY=
-RPC_URL="https://sepolia.base.org"
-NETWORK="base_sepolia"
 SIGNATURE_MINT_SIGNER=
-BLOCK_EXPLORER_API_KEY="GET_API_KEY_FROM_THE_EXPLORER"
-BLOCK_EXPLORER="https://sepolia.basescan.org/"
+BLOCK_EXPLORER_API_KEY="GET_API_KEY_FROM_THE_EXPLORER" # See https://docs.basescan.org/getting-started/viewing-api-usage-statistics
