--- a/template/package.json
+++ b/template/package.json
@@ -26,7 +26,9 @@
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@rainbow-me/rainbowkit": "1.3.3",
     "abitype": "^0.10.3",
+    "bufferutil": "^4.0.8",
     "clsx": "^2.1.0",
+    "encoding": "^0.1.13",
     "net": "^1.0.2",
     "next": "13.5.6",
     "next-pwa": "5.6.0",
@@ -45,6 +47,7 @@
     "shikiji-core": "^0.9.17",
     "tls": "^0.0.1",
     "unified": "^11.0.4",
+    "utf-8-validate": "^6.0.3",
     "viem": "1.21.4",
     "wagmi": "1.4.13",
     "workbox-webpack-plugin": "^7.0.0"
