--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
     "@types/inquirer": "^8.2.5",
-    "@types/node": "18.7.1",
+    "@types/node": "^20.11.16",
     "@types/tar": "4.0.3",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
