--- a/template/package.json
+++ b/template/package.json
@@ -24,11 +24,13 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@rainbow-me/rainbowkit": "1.3.3",
+    "@rainbow-me/rainbowkit": "2.0.0-beta.2",
+    "@tanstack/query-core": "^5.18.1",
+    "@tanstack/react-query": "^5.18.1",
     "abitype": "^0.10.3",
     "clsx": "^2.1.0",
     "net": "^1.0.2",
-    "next": "13.5.6",
+    "next": "^14.1.0",
     "next-pwa": "5.6.0",
     "perfume.js": "9.2.0",
     "pino-pretty": "^10.3.1",
@@ -44,8 +46,8 @@
     "shikiji": "^0.9.17",
     "shikiji-core": "^0.9.17",
     "unified": "^11.0.4",
-    "viem": "1.21.4",
-    "wagmi": "1.4.13",
+    "viem": "2.x",
+    "wagmi": "^2.5.6",
     "workbox-webpack-plugin": "^7.0.0"
   },
   "devDependencies": {
