--- a/template/package.json
+++ b/template/package.json
@@ -18,13 +18,14 @@
     "test:coverage:open": "yarn test:coverage && open coverage/lcov-report/index.html"
   },
   "dependencies": {
-    "@coinbase/onchainkit": "0.4.1",
+    "@coinbase/onchainkit": "0.5.1",
     "@coinbase/wallet-sdk": "^3.9.1",
     "@farcaster/hub-nodejs": "^0.10.21",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@rainbow-me/rainbowkit": "1.3.3",
+    "@rainbow-me/rainbowkit": "2.0.0-beta.6",
+    "@tanstack/react-query": "5.18.1",
     "abitype": "^0.10.3",
     "clsx": "^2.1.0",
     "net": "^1.0.2",
@@ -44,8 +45,8 @@
     "shikiji": "^0.9.17",
     "shikiji-core": "^0.9.17",
     "unified": "^11.0.4",
-    "viem": "1.21.4",
-    "wagmi": "1.4.13",
+    "viem": "2.7.6",
+    "wagmi": "2.5.6",
     "workbox-webpack-plugin": "^7.0.0"
   },
   "devDependencies": {
