--- a/template/package.json
+++ b/template/package.json
@@ -24,8 +24,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@rainbow-me/rainbowkit": "2.0.0-beta.6",
-    "@tanstack/react-query": "5.18.1",
+    "@rainbow-me/rainbowkit": "1.3.3",
     "abitype": "^0.10.3",
     "clsx": "^2.1.0",
     "net": "^1.0.2",
@@ -45,8 +44,8 @@
     "shikiji": "^0.9.17",
     "shikiji-core": "^0.9.17",
     "unified": "^11.0.4",
-    "viem": "2.7.6",
-    "wagmi": "2.5.6",
+    "viem": "1.21.4",
+    "wagmi": "1.4.13",
     "workbox-webpack-plugin": "^7.0.0"
   },
   "devDependencies": {
