--- a/.github/workflows/app-styles.js.yml
+++ b/.github/workflows/app-styles.js.yml
@@ -1,4 +1,4 @@
-name: App Test / Build
+name: App Styles / Format
 on:
   push:
     branches: ['main']
@@ -21,13 +21,9 @@ jobs:
       - name: App Install dependencies
         working-directory: ./template
         run: npm install
-      - name: App Test Check
+      - name: App Stylelint
         working-directory: ./template
-        # When fails, please check your tests
-        run: npm run test
-      - name: App Test Build
+        run: npm run stylelint
+      - name: App Format Check
         working-directory: ./template
-        # When fails, please check your build
-        run: | 
-          cp .env.local.default .env.local
-          npm run build
+        run: npm run format:check
