--- a/template/package.json
+++ b/template/package.json
@@ -24,7 +24,8 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@rainbow-me/rainbowkit": "1.3.5",
+    "@rainbow-me/rainbowkit": "2",
+    "@tanstack/react-query": "^5.20.1",
     "abitype": "^0.10.3",
     "clsx": "^2.1.0",
     "net": "^1.0.2",
@@ -44,8 +45,8 @@
     "shikiji": "^0.9.17",
     "shikiji-core": "^0.9.17",
     "unified": "^11.0.4",
-    "viem": "1.21.4",
-    "wagmi": "1.4.13",
+    "viem": "2.x",
+    "wagmi": "2",
     "workbox-webpack-plugin": "^7.0.0"
   },
   "devDependencies": {
