--- a/package.json
+++ b/package.json
@@ -4,16 +4,11 @@
   "repository": "https://github.com/coinbase/build-onchain-apps.git",
   "license": "Apache-2.0",
   "dependencies": {
-    "@rainbow-me/rainbowkit": "2",
-    "@tanstack/react-query": "^5.20.1",
     "chalk": "^4.1.2",
     "commander": "^11.1.0",
     "figlet": "^1.7.0",
     "inquirer": "^8.2.5",
-    "rimraf": "^5.0.5",
-    "tslib": "^2.3.0",
-    "viem": "2.x",
-    "wagmi": "2"
+    "rimraf": "^5.0.5"
   },
   "scripts": {
     "build": "nx build",
