--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "commander": "^11.1.0",
     "figlet": "^1.7.0",
     "inquirer": "^8.2.5",
-    "rimraf": "^5.0.5"
+    "rimraf": "^5.0.5",
+    "tslib": "^2.3.0"
   },
   "scripts": {
     "build": "nx build",
