--- a/template/package.json
+++ b/template/package.json
@@ -18,7 +18,7 @@
     "test:coverage:open": "yarn test:coverage && open coverage/lcov-report/index.html"
   },
   "dependencies": {
-    "@coinbase/onchainkit": "0.4.1",
+    "@coinbase/onchainkit": "0.6.1",
     "@coinbase/wallet-sdk": "^3.9.1",
     "@farcaster/hub-nodejs": "^0.10.21",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -45,8 +45,8 @@
     "shikiji": "^0.9.17",
     "shikiji-core": "^0.9.17",
     "unified": "^11.0.4",
-    "viem": "2.x",
-    "wagmi": "2",
+    "viem": "^2.7.8",
+    "wagmi": "^2.5.6",
     "workbox-webpack-plugin": "^7.0.0"
   },
   "devDependencies": {
