chore: update wagmi and viem

--- a/template/package.json
+++ b/template/package.json
@@ -45,8 +45,8 @@
     "shikiji": "^0.9.17",
     "shikiji-core": "^0.9.17",
     "unified": "^11.0.4",
-    "viem": "2.x",
-    "wagmi": "2",
+    "viem": "^2.7.8",
+    "wagmi": "2.5.5",
     "workbox-webpack-plugin": "^7.0.0"
   },
   "devDependencies": {
