--- a/.github/workflows/app-lint.js.yml
+++ b/.github/workflows/app-lint.js.yml
@@ -19,9 +19,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - name: App Install dependencies
-        working-directory: ./template
+        working-directory: ./template/web
         run: npm install
       - name: App Lint Check
-        working-directory: ./template
+        working-directory: ./template/web
         # When fails, please run "npm run lint" to your code
         run: npm run lint
