--- a/.github/workflows/app-styles.js.yml
+++ b/.github/workflows/app-styles.js.yml
@@ -19,11 +19,11 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - name: App Install dependencies
-        working-directory: ./template
+        working-directory: ./template/web
         run: npm install
       - name: App Stylelint
-        working-directory: ./template
+        working-directory: ./template/web
         run: npm run stylelint
       - name: App Format Check
-        working-directory: ./template
+        working-directory: ./template/web
         run: npm run format:check
