--- a/template/web/tsconfig.json
+++ b/template/web/tsconfig.json
@@ -21,7 +21,13 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    }
   },
   "include": [
     "custom.d.ts",
