--- a/template/web/package.json
+++ b/template/web/package.json
@@ -21,6 +21,7 @@
     "@coinbase/onchainkit": "0.6.1",
     "@coinbase/wallet-sdk": "^3.9.1",
     "@farcaster/hub-nodejs": "^0.10.21",
+    "@privy-io/react-auth": "^1.56.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
@@ -32,6 +33,7 @@
     "next": "13.5.6",
     "next-pwa": "5.6.0",
     "perfume.js": "9.2.0",
+    "permissionless": "^0.0.36",
     "pino-pretty": "^10.3.1",
     "prettier-plugin-solidity": "^1.3.1",
     "react": "^18",
