--- a/template/web/package.json
+++ b/template/web/package.json
@@ -28,6 +28,7 @@
     "@tanstack/react-query": "^5.20.1",
     "abitype": "^0.10.3",
     "clsx": "^2.1.0",
+    "is-ipfs": "6.0.2",
     "net": "^1.0.2",
     "next": "13.5.6",
     "next-pwa": "5.6.0",
