--- a/template/web/package.json
+++ b/template/web/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@rainbow-me/rainbowkit": "2",
+    "@react-spring/web": "^9.7.3",
     "@tanstack/react-query": "^5.20.1",
     "abitype": "^0.10.3",
     "clsx": "^2.1.0",
