feat: Paymaster Bundler - Experience (#431)
Co-authored-by: Alec Chen <fkalec@gmail.com>
Co-authored-by: Arun Sood <arun.sood@coinbase.com>

--- a/template/web/.env.local.example
+++ b/template/web/.env.local.example
@@ -1,3 +1,6 @@
 NEXT_PUBLIC_GOOGLE_ANALYTICS_ID=
 NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID="GET_ID_FROM_WALLET_CONNET" # See https://cloud.walletconnect.com
+NEXT_PUBLIC_RPC_URL="GET_FROM_COINBASE_CLOUD"
+NEXT_PUBLIC_PAYMASTER_URL="GET_FROM_COINBASE_CLOUD"
+NEXT_PUBLIC_PRIVY_ID="GET_FROM_PRIVY"
 ENVIRONMENT=localhost
