update solc version and evm_version

--- a/template/contracts/foundry.toml
+++ b/template/contracts/foundry.toml
@@ -4,7 +4,8 @@ out = "out"
 test = "test"
 libs = ["lib"]
 fs_permissions = [{ access = "read", path = "./" }]
-solc = "0.8.24"
+solc = "0.8.25"
+evm_version = 'cancun'
 
 [rpc_endpoints]
 base = "https://mainnet.base.org"
