--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -1,10 +1,17 @@
 name: Setup
+
+inputs:
+  node-version:
+    description: 'Node.js version'
+    required: true
+    default: '18.x'
+
 runs:
   using: composite
   steps:
-    - uses: actions/setup-node@v3
+    - uses: actions/setup-node@v4
       with:
-        node-version-file: '.nvmrc'
+        node-version: ${{ inputs.node-version }}
         registry-url: https://registry.npmjs.org
         cache: yarn
 
