--- a/.github/workflows/app-build.js.yml
+++ b/.github/workflows/app-build.js.yml
@@ -13,14 +13,16 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     steps:
       - uses: actions/checkout@v4
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
+      
+      - name: Setup
+        uses: ./.github/actions/setup
         with:
           node-version: ${{ matrix.node-version }}
-          cache: yarn
+      
       - name: App Install dependencies
         working-directory: ./template/web
         run: yarn --immutable
+      
       - name: App Test Build
         working-directory: ./template/web
         # When fails, please check your build
