fix other workflows

--- a/.github/workflows/app-test.js.yml
+++ b/.github/workflows/app-test.js.yml
@@ -13,14 +13,16 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+
+      - name: Setup
+        uses: ./.github/actions/setup
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+
       - name: App Install dependencies
         working-directory: ./template/web
-        run: npm install
+        run: yarn --immutable
+
       - name: App Test Check
         working-directory: ./template/web
         # When fails, please check your tests
