--- a/.github/workflows/cli.js.yml
+++ b/.github/workflows/cli.js.yml
@@ -17,13 +17,15 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+
+      - name: Setup
+        uses: ./.github/actions/setup
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+
       - name: CLI Install dependencies
-        run: npm install
+        run: yarn --immutable
+
       - name: CLI Lint Check
         # When fails, please run "npm run lint" to your code
         run: npm run lint
