feat: added Smart Wallet to BOAT (#469)

--- a/template/web/package.json
+++ b/template/web/package.json
@@ -108,5 +108,8 @@
     "ts-jest": "^29.1.1",
     "typescript": "~5.3.3"
   },
-  "packageManager": "yarn@4.1.0"
+  "packageManager": "yarn@4.1.0",
+  "resolutions": {
+    "@coinbase/wallet-sdk": "npm:@coinbase/wallet-sdk@4.0.0-beta.12"
+  }
 }
