--- a/template/web/package.json
+++ b/template/web/package.json
@@ -27,7 +27,7 @@
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@rainbow-me/rainbowkit": "2",
     "@react-spring/web": "^9.7.3",
-    "@tanstack/react-query": "^5.20.1",
+    "@tanstack/react-query": "^5.35.1",
     "abitype": "^0.10.3",
     "clsx": "^2.1.0",
     "graphql": "14",
@@ -51,7 +51,7 @@
     "shikiji-core": "^0.9.17",
     "unified": "^11.0.4",
     "viem": "2.x",
-    "wagmi": "2",
+    "wagmi": "^2.8.3",
     "workbox-webpack-plugin": "^7.0.0"
   },
   "devDependencies": {
