--- a/template/web/package.json
+++ b/template/web/package.json
@@ -36,7 +36,7 @@
     "next": "13.5.6",
     "next-pwa": "5.6.0",
     "perfume.js": "9.2.0",
-    "permissionless": "^0.0.36",
+    "permissionless": "0.1.26",
     "pino-pretty": "^10.3.1",
     "prettier-plugin-solidity": "^1.3.1",
     "react": "^18",
