--- a/template/web/package.json
+++ b/template/web/package.json
@@ -18,14 +18,13 @@
     "test:coverage:open": "yarn test:coverage && open coverage/lcov-report/index.html"
   },
   "dependencies": {
-    "@coinbase/onchainkit": "0.14.2",
-    "@coinbase/wallet-sdk": "4.0.0-beta.12",
+    "@coinbase/onchainkit": "0.16.10",
+    "@coinbase/wallet-sdk": "4.0.0",
     "@farcaster/hub-nodejs": "^0.11.9",
     "@privy-io/react-auth": "^1.56.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
-    "@rainbow-me/rainbowkit": "2",
     "@react-spring/web": "^9.7.3",
     "@tanstack/react-query": "^5.20.1",
     "abitype": "^0.10.3",
@@ -110,6 +109,6 @@
   },
   "packageManager": "yarn@4.1.0",
   "resolutions": {
-    "@coinbase/wallet-sdk": "npm:@coinbase/wallet-sdk@4.0.0-beta.12"
+    "@coinbase/wallet-sdk": "npm:@coinbase/wallet-sdk@4.0.0"
   }
 }
