Add smart wallet utility functions

--- a/template/web/package.json
+++ b/template/web/package.json
@@ -50,7 +50,7 @@
     "shikiji-core": "^0.9.17",
     "unified": "^11.0.4",
     "viem": "2.x",
-    "wagmi": "2",
+    "wagmi": "^2.9.2",
     "workbox-webpack-plugin": "^7.0.0"
   },
   "devDependencies": {
