--- a/template/web/package.json
+++ b/template/web/package.json
@@ -21,7 +21,6 @@
     "@coinbase/onchainkit": "0.16.10",
     "@coinbase/wallet-sdk": "4.0.0",
     "@farcaster/hub-nodejs": "^0.11.9",
-    "@privy-io/react-auth": "^1.56.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
@@ -35,7 +34,7 @@
     "next": "13.5.6",
     "next-pwa": "5.6.0",
     "perfume.js": "9.2.0",
-    "permissionless": "^0.0.36",
+    "permissionless": "0.1.26",
     "pino-pretty": "^10.3.1",
     "prettier-plugin-solidity": "^1.3.1",
     "react": "^18",
