--- a/template/web/.env.local.example
+++ b/template/web/.env.local.example
@@ -2,4 +2,4 @@ NEXT_PUBLIC_GOOGLE_ANALYTICS_ID=
 NEXT_PRIVATE_RPC_URL="GET_FROM_COINBASE_DEVELOPER_PLATFORM" # See https://www.coinbase.com/developer-platform/products/base-node?utm_source=boat
 NEXT_PRIVATE_PAYMASTER_URL="GET_FROM_COINBASE_DEVELOPER_PLATFORM" # See https://www.coinbase.com/developer-platform/products/base-node?utm_source=boat
 NEXT_PUBLIC_PRIVY_ID="GET_FROM_PRIVY"
-ENVIRONMENT=localhost
+NEXT_PUBLIC_ENVIRONMENT=localhost
