--- a/.github/workflows/build.js.yml
+++ b/.github/workflows/build.js.yml
@@ -1,4 +1,4 @@
-name: App Lint
+name: Build
 on:
   push:
     branches: ['main']
@@ -12,18 +12,18 @@ jobs:
         node-version: [18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       
       - name: Setup
         uses: ./.github/actions/setup
         with:
           node-version: ${{ matrix.node-version }}
-
-      - name: App Install dependencies
-        working-directory: ./template/web
+      
+      - name: Install dependencies
         run: yarn --immutable
       
-      - name: App Lint Check
-        working-directory: ./template/web
-        # When fails, please run "npm run lint" to your code
-        run: npm run lint
+      - name: Build
+        # When fails, please check your build
+        run: |
+          cp .env.local.example .env.local
+          npm run build
