--- a/package.json
+++ b/package.json
@@ -17,23 +17,15 @@
     "test:coverage:open": "yarn test:coverage && open coverage/lcov-report/index.html"
   },
   "dependencies": {
-    "@coinbase/onchainkit": "^0.19.7",
-    "@coinbase/wallet-sdk": "4.0.0",
+    "@coinbase/onchainkit": "^0.27.1",
     "@farcaster/hub-nodejs": "^0.11.9",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@react-spring/web": "^9.7.3",
-    "@tanstack/react-query": "^5.20.1",
-    "abitype": "^0.10.3",
-    "clsx": "^2.1.0",
-    "graphql": "14",
-    "graphql-request": "6",
     "net": "^1.0.2",
     "next": "13.5.6",
-    "next-pwa": "5.6.0",
     "perfume.js": "9.2.0",
-    "permissionless": "0.1.26",
     "pino-pretty": "^10.3.1",
     "prettier-plugin-solidity": "^1.3.1",
     "react": "^18",
@@ -46,10 +38,7 @@
     "scroll-into-view-if-needed": "^3.1.0",
     "shikiji": "^0.9.17",
     "shikiji-core": "^0.9.17",
-    "unified": "^11.0.4",
-    "viem": "2.x",
-    "wagmi": "^2.9.2",
-    "workbox-webpack-plugin": "^7.0.0"
+    "unified": "^11.0.4"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.23.5",
@@ -105,8 +94,5 @@
     "ts-jest": "^29.1.1",
     "typescript": "~5.3.3"
   },
-  "packageManager": "yarn@4.1.0",
-  "resolutions": {
-    "@coinbase/wallet-sdk": "npm:@coinbase/wallet-sdk@4.0.0"
-  }
+  "packageManager": "yarn@4.1.0"
 }
